SyntaxAnalyzer minor changes